# energy_analytics

./: .gitignore  README.md  main.py  pyproject.toml
playground/: eia_testing.ipynb  yfinance_testing.ipynb
