[project]
name = "energy-dbt-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-postgres>=1.10.0",
    "duckdb>=1.5.2",
    "flask>=3.1.3",
    "mlflow>=1.27.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "statsmodels>=0.14.6",
]
